[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-pricing"
version = "0.1.0"
description = "Quantitative pricing, calibration and simulation models (Black-Scholes, Heston, etc.)"
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "Alberto Guilabert", email = "TU_EMAIL_AQUI" }
]

dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "pandas>=1.5",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]
