[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "volcal"
version = "1.0.0"
description = "Volatility models: pricing and calibration framework"
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "qjant", email = "agm324ua@gmail.com" }
]

dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "pandas>=1.5",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]
